fix(swagger): fix swagger comment error and regenerate
