# app/api/swagger/openapi_docs.go
@@ -1,4 +1,4 @@
-// Package swagger Code generated by swaggo/swag at 2023-10-14 15:00:25.4461264 +0800 CST m=+3.455676301. DO NOT EDIT
+// Package swagger Code generated by swaggo/swag at 2023-10-14 16:54:23.7263181 +0800 CST m=+3.359557601. DO NOT EDIT
 package swagger
 
 import "github.com/swaggo/swag"
@@ -40,6 +40,33 @@ const docTemplateopenapi = `{
                 "responses": {}
             }
         }
+    },
+    "definitions": {
+        "request.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.RegisterRequest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        }
     }
 }`
 
@@ -47,7 +74,7 @@ const docTemplateopenapi = `{
 var SwaggerInfoopenapi = &swag.Spec{
 	Version:          "v1.0.0",
 	Host:             "",
-	BasePath:         "/openapi/",
+	BasePath:         "/open/doc/",
 	Schemes:          []string{},
 	Title:            "Wilson App Internal API Documentation",
 	Description:      "Wilson api documentation",
