# app/handler/swagger/appapi_docs.go
@@ -1,4 +1,4 @@
-// Package swagger Code generated by swaggo/swag at 2023-10-14 15:01:16.2766467 +0800 CST m=+3.464585801. DO NOT EDIT
+// Package swagger Code generated by swaggo/swag at 2023-10-14 17:03:23.9329459 +0800 CST m=+3.598264601. DO NOT EDIT
 package swagger
 
 import "github.com/swaggo/swag"
@@ -14,7 +14,125 @@ const docTemplateappapi = `{
     },
     "host": "{{.Host}}",
     "basePath": "{{.BasePath}}",
-    "paths": {},
+    "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "if login success, return jwt token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "user login api",
+                "parameters": [
+                    {
+                        "description": "comment",
+                        "name": "loginBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/auth/logout": {
+            "delete": {
+                "description": "user logout",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "user logout api",
+                "responses": {}
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "description": "user register api",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "user register api",
+                "parameters": [
+                    {
+                        "description": "comment",
+                        "name": "registerBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.RegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/email/code": {
+            "get": {
+                "description": "auth code email api",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "email"
+                ],
+                "summary": "auth code email api",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/ping": {
+            "get": {
+                "description": "to test app api if is ok",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "system"
+                ],
+                "summary": "app test ping api",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ping name",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        }
+    },
     "definitions": {
         "request.LoginRequest": {
             "type": "object",
@@ -48,7 +166,7 @@ const docTemplateappapi = `{
 var SwaggerInfoappapi = &swag.Spec{
 	Version:          "v1.0.0",
 	Host:             "",
-	BasePath:         "/api/",
+	BasePath:         "/api",
 	Schemes:          []string{},
 	Title:            "Wilson App Internal API Documentation",
 	Description:      "Wilson api documentation",
